
syntax = "proto3";

package proto;

service Work {
    rpc SayHello ( HelloRequest ) returns ( HelloResponse ) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}